--- a/index.html
+++ b/index.html
@@ -471,9 +471,9 @@
             <div class="card-body">
               <h5 class="card-title text-white fw-bold pb-4 fs-3">Projects</h5>
               <div class="d-flex gap-5 justify-content-between">
-                <p class="card-text color-green fs-2 px-3 pt-2">4</p>
+                <p class="color-green fs-2 px-3 pt-2">4</p>
                 <img
-                  class="rounded-circle w-25 h-25"
+                  class="rounded-circle w-25 h-25 img-fluid"
                   src="images/code-symbol.jpg"
                 />
               </div>
@@ -486,9 +486,9 @@
                 Certificates
               </h5>
               <div class="d-flex gap-5 justify-content-between">
-                <p class="card-text color-green fs-2 px-3 pt-2">3</p>
+                <p class="color-green fs-2 px-3 pt-2">3</p>
                 <img
-                  class="rounded-circle w-25 h-25"
+                  class="rounded-circle w-25 h-25 img-fluid"
                   src="images/certificate.jpg"
                 />
               </div>
@@ -501,9 +501,9 @@
                 Experience
               </h5>
               <div class="d-flex gap-5 justify-content-between">
-                <p class="card-text color-green fs-2 px-3 pt-2">8y</p>
+                <p class="color-green fs-2 px-3 pt-2">8y</p>
                 <img
-                  class="rounded-circle w-25 h-25"
+                  class="rounded-circle w-25 h-25 img-fluid"
                   src="images/computer.jpg"
                 />
               </div>
@@ -530,6 +530,7 @@
                     class="form-control"
                     id="email-field"
                     placeholder="name@example.com"
+                    required
                   />
                 </div>
 
