Trying to fix carousel

--- a/index.html
+++ b/index.html
@@ -129,13 +129,8 @@
         </div>
       </section>
 
-      <section class="p-5">
-        <div class="p-2"></div>
-        <!-- break section -->
-      </section>
-
       <!-- Make responsive to size adjustments -->
-      <section id="carousel-section">
+      <section id="carousel-section" style="padding-top: 6rem">
         <div
           id="carouselExampleIndicators"
           class="carousel slide pt-5"
@@ -167,14 +162,14 @@
           <div class="carousel-inner">
             <div class="carousel-item active">
               <img
-                class="d-block w-100"
-                src="images/dragon 2.jpg"
+                class="d-block h-75"
+                src="images/campus-connect.jpeg"
                 alt="First slide"
               />
             </div>
             <div class="carousel-item">
               <img
-                class="d-block w-100"
+                class="d-block"
                 src="images/dragon 2.jpg"
                 alt="Second slide"
               />
@@ -209,7 +204,6 @@
         </div>
       </section>
 
-      <!-- Implement -->
       <section
         class="p-5"
         id="experience"
@@ -288,144 +282,142 @@
             </div>
           </div>
         </div>
+      </section>
 
-        <section id="stack" style="margin-top: 7rem">
-          <h1 class="text-center fw-bold py-5">Tech Stack</h1>
+      <section id="stack" style="margin-top: 7rem">
+        <h1 class="text-center fw-bold py-5">Tech Stack</h1>
 
-          <div class="d-flex flex-wrap gap-3 justify-content-center py-5">
-            <div
-              class="bg-dark bg-opacity-50 rounded-4 d-flex card-custom align-items-center justify-content-center border border-2 border-light"
-              style="width: 100px; height: 100px"
-            >
-              <img
-                class="img-fluid w-75 h-75"
-                src="images/js-logo.png"
-                alt="JavaScript"
-              />
-            </div>
-
-            <div
-              class="bg-dark bg-opacity-50 rounded-4 d-flex card-custom align-items-center justify-content-center border border-2 border-light"
-              style="width: 100px; height: 100px"
-            >
-              <img
-                class="img-fluid w-75 h-75"
-                src="images/html-logo.png"
-                alt="HTML5"
-              />
-            </div>
-
-            <div
-              class="bg-dark bg-opacity-50 rounded-4 d-flex card-custom align-items-center justify-content-center border border-2 border-light"
-              style="width: 100px; height: 100px"
-            >
-              <img
-                class="img-fluid w-75 h-75"
-                src="images/css-logo.png"
-                alt="CSS3"
-              />
-            </div>
-
-            <div
-              class="bg-dark bg-opacity-50 rounded-4 d-flex card-custom align-items-center justify-content-center border border-2 border-light"
-              style="width: 100px; height: 100px"
-            >
-              <img
-                class="img-fluid w-75 h-75"
-                src="images/bootstrap-logo.png"
-                alt="Bootstrap"
-              />
-            </div>
-
-            <div
-              class="bg-dark bg-opacity-50 rounded-4 d-flex card-custom align-items-center justify-content-center border border-2 border-light"
-              style="width: 100px; height: 100px"
-            >
-              <img
-                class="img-fluid w-75 h-75"
-                src="images/tailwind-logo.png"
-                alt="Tailwind"
-              />
-            </div>
-
-            <div
-              class="bg-dark bg-opacity-50 rounded-4 d-flex card-custom align-items-center justify-content-center border border-2 border-light"
-              style="width: 100px; height: 100px"
-            >
-              <img
-                class="img-fluid w-75 h-75"
-                src="images/java-logo.png"
-                alt="Java"
-              />
-            </div>
-
-            <div
-              class="bg-dark bg-opacity-50 rounded-4 d-flex card-custom align-items-center justify-content-center border border-2 border-light"
-              style="width: 100px; height: 100px"
-            >
-              <img
-                class="img-fluid w-75 h-75"
-                src="images/c-logo.png"
-                alt="C"
-              />
-            </div>
-
-            <div
-              class="bg-dark bg-opacity-50 rounded-4 d-flex card-custom align-items-center justify-content-center border border-2 border-light"
-              style="width: 100px; height: 100px"
-            >
-              <img
-                class="img-fluid w-75 h-75"
-                src="images/cpp-logo.png"
-                alt="C++"
-              />
-            </div>
-
-            <div
-              class="bg-dark bg-opacity-50 rounded-4 d-flex card-custom align-items-center justify-content-center border border-2 border-light"
-              style="width: 100px; height: 100px"
-            >
-              <img
-                class="img-fluid w-75 h-75"
-                src="images/csharp-logo.png"
-                alt="C#"
-              />
-            </div>
-
-            <div
-              class="bg-dark bg-opacity-50 rounded-4 d-flex card-custom align-items-center justify-content-center border border-2 border-light"
-              style="width: 100px; height: 100px"
-            >
-              <img
-                class="img-fluid w-75 h-75"
-                src="images/php-logo.png"
-                alt="PHP"
-              />
-            </div>
-
-            <div
-              class="bg-dark bg-opacity-50 rounded-4 d-flex card-custom align-items-center justify-content-center border border-2 border-light"
-              style="width: 100px; height: 100px"
-            >
-              <img
-                class="img-fluid w-75 h-75"
-                src="images/mysql-logo.png"
-                alt="MySQL"
-              />
-            </div>
-
-            <div
-              class="bg-dark bg-opacity-50 rounded-4 d-flex card-custom align-items-center justify-content-center border border-2 border-light"
-              style="width: 100px; height: 100px"
-            >
-              <img
-                class="img-fluid w-75 h-75"
-                src="images/python-logo.png"
-                alt="Python"
-              />
-            </div>
+        <div
+          class="d-flex flex-wrap gap-3 justify-content-center py-5 px-0 px-md-5"
+        >
+          <div
+            class="bg-dark bg-opacity-50 rounded-4 d-flex card-custom align-items-center justify-content-center border border-2 border-light"
+            style="width: 100px; height: 100px"
+          >
+            <img
+              class="img-fluid w-75 h-75"
+              src="images/js-logo.png"
+              alt="JavaScript"
+            />
           </div>
-        </section>
+
+          <div
+            class="bg-dark bg-opacity-50 rounded-4 d-flex card-custom align-items-center justify-content-center border border-2 border-light"
+            style="width: 100px; height: 100px"
+          >
+            <img
+              class="img-fluid w-75 h-75"
+              src="images/html-logo.png"
+              alt="HTML5"
+            />
+          </div>
+
+          <div
+            class="bg-dark bg-opacity-50 rounded-4 d-flex card-custom align-items-center justify-content-center border border-2 border-light"
+            style="width: 100px; height: 100px"
+          >
+            <img
+              class="img-fluid w-75 h-75"
+              src="images/css-logo.png"
+              alt="CSS3"
+            />
+          </div>
+
+          <div
+            class="bg-dark bg-opacity-50 rounded-4 d-flex card-custom align-items-center justify-content-center border border-2 border-light"
+            style="width: 100px; height: 100px"
+          >
+            <img
+              class="img-fluid w-75 h-75"
+              src="images/bootstrap-logo.png"
+              alt="Bootstrap"
+            />
+          </div>
+
+          <div
+            class="bg-dark bg-opacity-50 rounded-4 d-flex card-custom align-items-center justify-content-center border border-2 border-light"
+            style="width: 100px; height: 100px"
+          >
+            <img
+              class="img-fluid w-75 h-75"
+              src="images/tailwind-logo.png"
+              alt="Tailwind"
+            />
+          </div>
+
+          <div
+            class="bg-dark bg-opacity-50 rounded-4 d-flex card-custom align-items-center justify-content-center border border-2 border-light"
+            style="width: 100px; height: 100px"
+          >
+            <img
+              class="img-fluid w-75 h-75"
+              src="images/java-logo.png"
+              alt="Java"
+            />
+          </div>
+
+          <div
+            class="bg-dark bg-opacity-50 rounded-4 d-flex card-custom align-items-center justify-content-center border border-2 border-light"
+            style="width: 100px; height: 100px"
+          >
+            <img class="img-fluid w-75 h-75" src="images/c-logo.png" alt="C" />
+          </div>
+
+          <div
+            class="bg-dark bg-opacity-50 rounded-4 d-flex card-custom align-items-center justify-content-center border border-2 border-light"
+            style="width: 100px; height: 100px"
+          >
+            <img
+              class="img-fluid w-75 h-75"
+              src="images/cpp-logo.png"
+              alt="C++"
+            />
+          </div>
+
+          <div
+            class="bg-dark bg-opacity-50 rounded-4 d-flex card-custom align-items-center justify-content-center border border-2 border-light"
+            style="width: 100px; height: 100px"
+          >
+            <img
+              class="img-fluid w-75 h-75"
+              src="images/csharp-logo.png"
+              alt="C#"
+            />
+          </div>
+
+          <div
+            class="bg-dark bg-opacity-50 rounded-4 d-flex card-custom align-items-center justify-content-center border border-2 border-light"
+            style="width: 100px; height: 100px"
+          >
+            <img
+              class="img-fluid w-75 h-75"
+              src="images/php-logo.png"
+              alt="PHP"
+            />
+          </div>
+
+          <div
+            class="bg-dark bg-opacity-50 rounded-4 d-flex card-custom align-items-center justify-content-center border border-2 border-light"
+            style="width: 100px; height: 100px"
+          >
+            <img
+              class="img-fluid w-75 h-75"
+              src="images/mysql-logo.png"
+              alt="MySQL"
+            />
+          </div>
+
+          <div
+            class="bg-dark bg-opacity-50 rounded-4 d-flex card-custom align-items-center justify-content-center border border-2 border-light"
+            style="width: 100px; height: 100px"
+          >
+            <img
+              class="img-fluid w-75 h-75"
+              src="images/python-logo.png"
+              alt="Python"
+            />
+          </div>
+        </div>
       </section>
 
       <section
