--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
 
     <script src="js/script.js"></script>
 
-    <!-- Make nav bar toggler -->
     <header>
       <nav
         class="fw-bold navbar navbar-dark bg-color p-4 px-5 border-bottom border-dark navbar-expand-md fixed-top"
@@ -85,7 +84,7 @@
                 </a>
                 <ul class="dropdown-menu dropdown-color">
                   <li>
-                    <a class="dropdown-item text-white" href="#"
+                    <a class="dropdown-item text-white" href="#campus-connect"
                       >CampusConnect</a
                     >
                   </li>
@@ -129,11 +128,10 @@
         </div>
       </section>
 
-      <!-- Make responsive to size adjustments -->
       <section id="carousel-section" style="padding-top: 6rem">
         <div
           id="carouselExampleIndicators"
-          class="carousel slide pt-5"
+          class="carousel slide pt-5 entry-animation"
           data-bs-ride="carousel"
         >
           <div class="carousel-indicators">
@@ -160,24 +158,24 @@
           </div>
 
           <div class="carousel-inner">
-            <div class="carousel-item active">
+            <div class="carousel-item active" id="campus-connect">
               <img
-                class="d-block h-75"
+                class="d-block carousel-image-custom"
                 src="images/campus-connect.jpeg"
                 alt="First slide"
               />
             </div>
             <div class="carousel-item">
               <img
-                class="d-block"
-                src="images/dragon 2.jpg"
+                class="d-block carousel-image-custom"
+                src="images/shop-smart.jpeg"
                 alt="Second slide"
               />
             </div>
             <div class="carousel-item">
               <img
-                class="d-block w-100"
-                src="images/dragon 2.jpg"
+                class="d-block carousel-image-custom"
+                src="images/track-it.jpeg"
                 alt="Third slide"
               />
             </div>
@@ -209,10 +207,12 @@
         id="experience"
         style="margin-top: 5rem; margin-bottom: 5rem"
       >
-        <h1 class="text-center fw-bold py-5 display-3">Experience</h1>
+        <h1 class="text-center fw-bold py-5 display-3 entry-animation">
+          Experience
+        </h1>
 
-        <div class="d-flex gap-5 flex-column flex-md-row">
-          <div class="container justify-content-center">
+        <div class="d-flex gap-5 flex-column flex-md-row view">
+          <div class="container justify-content-center entry-animation">
             <div class="rounded-4 bg-dark bg-opacity-25 p-4 card-custom">
               <h3 class="fw-bold fs-5 pb-2">Web</h3>
               <div
@@ -236,7 +236,7 @@
             </div>
           </div>
 
-          <div class="container justify-content-center">
+          <div class="container justify-content-center entry-animation">
             <div class="rounded-4 bg-dark bg-opacity-25 p-4 card-custom">
               <h3 class="fw-bold fs-5 pb-2">Mobile</h3>
               <div
@@ -259,7 +259,7 @@
             </div>
           </div>
 
-          <div class="container justify-content-center">
+          <div class="container justify-content-center entry-animation">
             <div class="rounded-4 bg-dark bg-opacity-25 p-4 card-custom">
               <h3 class="fw-bold fs-5 pb-2">Machine Learning</h3>
               <div
@@ -285,13 +285,13 @@
       </section>
 
       <section id="stack" style="margin-top: 7rem">
-        <h1 class="text-center fw-bold py-5">Tech Stack</h1>
+        <h1 class="text-center fw-bold py-5 entry-animation">Tech Stack</h1>
 
         <div
           class="d-flex flex-wrap gap-3 justify-content-center py-5 px-0 px-md-5"
         >
           <div
-            class="bg-dark bg-opacity-50 rounded-4 d-flex card-custom align-items-center justify-content-center border border-2 border-light"
+            class="bg-dark bg-opacity-50 rounded-4 d-flex card-custom align-items-center justify-content-center border border-2 border-light entry-animation"
             style="width: 100px; height: 100px"
           >
             <img
@@ -302,7 +302,7 @@
           </div>
 
           <div
-            class="bg-dark bg-opacity-50 rounded-4 d-flex card-custom align-items-center justify-content-center border border-2 border-light"
+            class="bg-dark bg-opacity-50 rounded-4 d-flex card-custom align-items-center justify-content-center border border-2 border-light entry-animation"
             style="width: 100px; height: 100px"
           >
             <img
@@ -313,7 +313,7 @@
           </div>
 
           <div
-            class="bg-dark bg-opacity-50 rounded-4 d-flex card-custom align-items-center justify-content-center border border-2 border-light"
+            class="bg-dark bg-opacity-50 rounded-4 d-flex card-custom align-items-center justify-content-center border border-2 border-light entry-animation"
             style="width: 100px; height: 100px"
           >
             <img
@@ -324,7 +324,7 @@
           </div>
 
           <div
-            class="bg-dark bg-opacity-50 rounded-4 d-flex card-custom align-items-center justify-content-center border border-2 border-light"
+            class="bg-dark bg-opacity-50 rounded-4 d-flex card-custom align-items-center justify-content-center border border-2 border-light entry-animation"
             style="width: 100px; height: 100px"
           >
             <img
@@ -335,7 +335,7 @@
           </div>
 
           <div
-            class="bg-dark bg-opacity-50 rounded-4 d-flex card-custom align-items-center justify-content-center border border-2 border-light"
+            class="bg-dark bg-opacity-50 rounded-4 d-flex card-custom align-items-center justify-content-center border border-2 border-light entry-animation"
             style="width: 100px; height: 100px"
           >
             <img
@@ -346,7 +346,7 @@
           </div>
 
           <div
-            class="bg-dark bg-opacity-50 rounded-4 d-flex card-custom align-items-center justify-content-center border border-2 border-light"
+            class="bg-dark bg-opacity-50 rounded-4 d-flex card-custom align-items-center justify-content-center border border-2 border-light entry-animation"
             style="width: 100px; height: 100px"
           >
             <img
@@ -357,14 +357,14 @@
           </div>
 
           <div
-            class="bg-dark bg-opacity-50 rounded-4 d-flex card-custom align-items-center justify-content-center border border-2 border-light"
+            class="bg-dark bg-opacity-50 rounded-4 d-flex card-custom align-items-center justify-content-center border border-2 border-light entry-animation"
             style="width: 100px; height: 100px"
           >
             <img class="img-fluid w-75 h-75" src="images/c-logo.png" alt="C" />
           </div>
 
           <div
-            class="bg-dark bg-opacity-50 rounded-4 d-flex card-custom align-items-center justify-content-center border border-2 border-light"
+            class="bg-dark bg-opacity-50 rounded-4 d-flex card-custom align-items-center justify-content-center border border-2 border-light entry-animation"
             style="width: 100px; height: 100px"
           >
             <img
@@ -375,7 +375,7 @@
           </div>
 
           <div
-            class="bg-dark bg-opacity-50 rounded-4 d-flex card-custom align-items-center justify-content-center border border-2 border-light"
+            class="bg-dark bg-opacity-50 rounded-4 d-flex card-custom align-items-center justify-content-center border border-2 border-light entry-animation"
             style="width: 100px; height: 100px"
           >
             <img
@@ -386,7 +386,7 @@
           </div>
 
           <div
-            class="bg-dark bg-opacity-50 rounded-4 d-flex card-custom align-items-center justify-content-center border border-2 border-light"
+            class="bg-dark bg-opacity-50 rounded-4 d-flex card-custom align-items-center justify-content-center border border-2 border-light entry-animation"
             style="width: 100px; height: 100px"
           >
             <img
@@ -397,7 +397,7 @@
           </div>
 
           <div
-            class="bg-dark bg-opacity-50 rounded-4 d-flex card-custom align-items-center justify-content-center border border-2 border-light"
+            class="bg-dark bg-opacity-50 rounded-4 d-flex card-custom align-items-center justify-content-center border border-2 border-light entry-animation"
             style="width: 100px; height: 100px"
           >
             <img
@@ -408,7 +408,7 @@
           </div>
 
           <div
-            class="bg-dark bg-opacity-50 rounded-4 d-flex card-custom align-items-center justify-content-center border border-2 border-light"
+            class="bg-dark bg-opacity-50 rounded-4 d-flex card-custom align-items-center justify-content-center border border-2 border-light entry-animation"
             style="width: 100px; height: 100px"
           >
             <img
@@ -424,7 +424,9 @@
         class="container p-5 justify-content-center align-items-center"
         id="about"
       >
-        <h1 class="text-center fw-bold py-5 display-3">About Me</h1>
+        <h1 class="text-center fw-bold py-5 display-3 entry-animation">
+          About Me
+        </h1>
 
         <div
           class="container d-flex justify-content-center gap-5 align-items-center flex-column flex-md-row"
@@ -433,12 +435,12 @@
           <img
             src="images/foto-perfil.jpg"
             alt="Profile photo of António Costa"
-            class="rounded-circle"
+            class="rounded-circle entry-animation"
             style="height: 300px"
           />
 
           <div class="">
-            <p class="fs-5 py-3">
+            <p class="fs-5 py-3 entry-animation">
               &lt;I am a Full Stack Developer with experience in designing and
               building scalable web applications. My expertise spans both
               frontend and backend development, using technologies such as
@@ -448,7 +450,7 @@
               href="files/CV.pdf"
               download="Antonio_Costa_CV.pdf"
               type="button"
-              class="btn btn-outline-light w-50"
+              class="btn btn-outline-light w-50 entry-animation"
             >
               Download CV
             </a>
@@ -456,7 +458,7 @@
         </div>
 
         <div
-          class="d-flex gap-5 justify-content-center align-items-center p-5 flex-column flex-md-row"
+          class="d-flex gap-5 justify-content-center align-items-center p-5 flex-column flex-md-row entry-animation"
           id="about-cards"
         >
           <div class="card bg-dark bg-opacity-50 card-custom w-100">
@@ -505,7 +507,9 @@
       </section>
 
       <section class="p-5" id="contact">
-        <h1 class="text-center fw-bold py-5 display-3">Contact Me</h1>
+        <h1 class="text-center fw-bold py-5 display-3 entry-animation">
+          Contact Me
+        </h1>
         <section
           class="container justify-content-center"
           style="padding-bottom: 8rem"
@@ -514,12 +518,12 @@
             <div class="col-12 col-md-8 col-lg-6">
               <form action="mailto:antonio.costa@gmail.com">
                 <div class="mb-3">
-                  <label for="email-field" class="form-label"
+                  <label for="email-field" class="form-label entry-animation"
                     >Email address</label
                   >
                   <input
                     type="email"
-                    class="form-control"
+                    class="form-control entry-animation"
                     id="email-field"
                     placeholder="name@example.com"
                     required
@@ -527,18 +531,23 @@
                 </div>
 
                 <div class="mb-3">
-                  <label for="exampleFormControlTextarea1" class="form-label"
+                  <label
+                    for="exampleFormControlTextarea1"
+                    class="form-label entry-animation"
                     >Your message</label
                   >
                   <textarea
-                    class="form-control"
+                    class="form-control entry-animation"
                     id="exampleFormControlTextarea1"
                     rows="3"
                   ></textarea>
                 </div>
 
                 <div class="py-4">
-                  <button type="submit" class="btn btn-outline-light w-100">
+                  <button
+                    type="submit"
+                    class="btn btn-outline-light w-100 entry-animation"
+                  >
                     Submit
                   </button>
                 </div>
