--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <link rel="stylesheet" href="css/main.css" />
   </head>
-  <body class="text-white bg-color px-0 px-md-5">
+  <body class="text-white bottom-gradient bg-color px-0 px-md-5">
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
@@ -93,9 +93,6 @@
                   </li>
                   <li>
                     <a class="dropdown-item text-white" href="#">TrackIt</a>
-                  </li>
-                  <li>
-                    <a class="dropdown-item text-white" href="#">WeatherWise</a>
                   </li>
                 </ul>
               </li>
